Adjust in style at newsfeed

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -4,7 +4,7 @@ $brand-color-in-white: darken($brand-color, 10%);
 $font-primary-font: 'Cabin';
 $font-secondary-font: 'helvetica', 'Cabin';
 
-$background-color: #f1f1f1;
+$background-color: #fafafa;
 $surface-color: #ffffff;
 $surface-secondary-color: #f7f7f7;
 
