--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -77,7 +77,7 @@ $description-color: $font-secondary-color;
   &__secondary-section {
     color: $font-primary-color;
     font-size: 15px;
-    margin: 3px 0 0 0px;
+    margin: 6px 0 0 0px;
     font-weight: 500;
     @extend .me-card__section;
   }
@@ -124,7 +124,7 @@ $description-color: $font-secondary-color;
     font-size: 14px;
     border: 0;
     box-shadow: none;
-    background: $surface-color;
+    background: $background-color;
     position: relative;
     //margin: 0 0 25px 0;
 
@@ -208,11 +208,11 @@ $description-color: $font-secondary-color;
     }
 
     & .mdc-card__media {
-      transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+      //transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
 
       &:hover {
-        box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.24);
+        //box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.24);
       }
     }
 
