--- a/web/app/assets/stylesheets/components/me-favorite.scss
+++ b/web/app/assets/stylesheets/components/me-favorite.scss
@@ -6,7 +6,7 @@ $gutter: 6px;
 
 .me-favorite {
   position: relative;
-  margin-bottom: 35px;
+  margin-bottom: 85px;
   @include mdc-layout-grid-media-query_("phone") {
     display: none;
   }
@@ -14,7 +14,7 @@ $gutter: 6px;
   &__list {
     &::before {
       content: close-quote;
-      background: linear-gradient(to left, transparent, $surface-color);
+      background: linear-gradient(to left, transparent, $background-color);
       width: 126px;
       height: 90%;
       position: absolute;
@@ -28,7 +28,7 @@ $gutter: 6px;
 
     &::after {
       content: close-quote;
-      background: linear-gradient(to right, transparent, $surface-color);
+      background: linear-gradient(to right, transparent, $background-color);
       width: 126px;
       height: 90%;
       position: absolute;
@@ -72,7 +72,7 @@ $gutter: 6px;
 
   & .mdc-layout-grid__inner {
     display: grid;
-    grid-gap: 8px;
+    grid-gap: 12px;
     grid-template-columns: inherit;
     grid-template-rows: minmax(150px, 1fr);
     grid-auto-flow: column;
@@ -115,7 +115,7 @@ $gutter: 6px;
     &__title {
       color: $font-primary-color;
       font-size: 13px;
-      margin: 4px 0 0 0;
+      margin: 12px 0 0 0;
       font-weight: 400;
       padding-right: 6px;
     }
@@ -145,11 +145,11 @@ $gutter: 6px;
     & .mdc-card__media {
       border-radius: 3px;
       overflow: hidden;
-      transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+      //transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.12);
 
       &:hover {
-        box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.24);
+        //box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.24);
       }
     }
   }
