--- a/web/app/assets/stylesheets/components/me-follow-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-follow-chip-set.scss
@@ -3,8 +3,8 @@
 .me-follow-chip-set {
 
   & .mdc-chip {
-    background: darken($surface-color, 5%);
-    //border: 1px solid $border-color;
+    background: $background-color;
+    border: 1px solid $border-color;
 
     &__text {
       transition: color 0.3s ease-in;
@@ -24,7 +24,7 @@
     }
 
     &--selected {
-      border-color: $brand-color;
+      border: 1px solid $brand-color;
 
       & .mdc-chip__text {
         color: $brand-color-in-white;
