--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -4,7 +4,7 @@
   grid-column: 12 span;
   display: grid;
   margin: 0 0 12px 0;
-  grid-gap: 0 12px;
+  //grid-gap: 0 12px;
   grid-template-columns: repeat(12, minmax(0, 1fr));
   height: auto;
   min-height: 260px;
@@ -34,7 +34,7 @@
   }
 
   & .me-card {
-    padding: 6px;
+    background: none;
     min-height: 150px;
     border-radius: 2px;
 
@@ -59,13 +59,13 @@
 
   &::before {
     content: close-quote;
-    background: linear-gradient(0deg, darken($surface-color, 5%), transparent);
     width: 100%;
     height: 260px;
     position: absolute;
     left: 0;
     animation-name: show-in;
     animation-duration: 1.5s;
+    border-bottom: 1px solid darken($surface-color, 5%);
   }
 
   & .mdc-layout-grid__cell--span-3, .mdc-layout-grid__cell--span-3-desktop {
