--- a/web/app/views/feeds/_float_menu.html.erb
+++ b/web/app/views/feeds/_float_menu.html.erb
@@ -1,58 +1,66 @@
-<div class="me-float-menu">
+<div data-controller="float-menu" data-target="float-menu.menu" class="me-float-menu">
   <div class="me-float-menu__nav">
-    <div class="me-float-menu__item" data-collection="saves">
+    <div class="me-float-menu__item" data-action="click->float-menu#scrollTo" data-collection-identifier="saves">
       <div class="me-float-menu__icon">
         <i class="material-icons">stars</i>
       </div>
-      <div class="me-floa-menu__label">
+      <div class="me-float-menu__label">
         Salvos
       </div>
     </div>
-    <div class="me-float-menu__item" data-collection="today-and-tomorrow">
+    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="today-and-tomorrow">
       <div class="me-float-menu__icon">
         <i class="material-icons">today</i>
       </div>
-      <div class="me-floa-menu__label">
+      <div class="me-float-menu__label">
         Hoje e amanhã
       </div>
     </div>
-    <div class="me-float-menu__item" data-collection="follow">
+    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="follow">
       <div class="me-float-menu__icon">
         <i class="material-icons">add_box</i>
       </div>
-      <div class="me-floa-menu__label">
+      <div class="me-float-menu__label">
         Tópicos seguidos
       </div>
     </div>
-    <div class="me-float-menu__item" data-collection="user-personas">
+    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="user-suggestions">
       <div class="me-float-menu__icon">
         <i class="material-icons">how_to_reg</i>
       </div>
-      <div class="me-floa-menu__label">
+      <div class="me-float-menu__label">
         Indicados para você
       </div>
     </div>
-    <div class="me-float-menu__item" data-collection="cinema">
+    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="user-personas">
+      <div class="me-float-menu__icon">
+        <i class="material-icons">people</i>
+      </div>
+      <div class="me-float-menu__label">
+        Gostos parecidos
+      </div>
+    </div>
+    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="cinema">
       <div class="me-float-menu__icon">
         <i class="material-icons">movie</i>
       </div>
-      <div class="me-floa-menu__label">
+      <div class="me-float-menu__label">
         Nos cinemas
       </div>
     </div>
-    <div class="me-float-menu__item" data-collection="street">
+    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="street">
       <div class="me-float-menu__icon">
         <i class="material-icons">nature_people</i>
       </div>
-      <div class="me-floa-menu__label">
+      <div class="me-float-menu__label">
         Na rua
       </div>
     </div>
-    <div class="me-float-menu__item" data-collection="history">
+    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="history">
       <div class="me-float-menu__icon">
         <i class="material-icons">history</i>
       </div>
-      <div class="me-floa-menu__label">
+      <div class="me-float-menu__label">
         Histórico de visualizados
       </div>
     </div>
