--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -1,4 +1,4 @@
-<div id="saves" class="me-favorite" data-controller="favorite" data-target="favorite.saves">
+<div id="saves" class="me-favorite" data-controller="favorite" data-target="favorite.saves" data-observable="float-menu.section">
   <% if current_user and !current_user.taste_events_saved.empty? %>
     <h3 data-target="favorite.header" class="mdc-typography--headline6">
       Eventos salvos
