--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render partial: "saves",
            locals:  {
-               identifier:       'salvos',
+               identifier:   'salvos',
                saved_events: @favorited_events
            } %>
 
@@ -13,7 +13,7 @@
     <%= render partial: "components/collection/collection",
                locals:  {
                    items:      @items[:user],
-                   titles:     {
+                   title:     {
                        principal: "Eventos encontrados para \"#{params[:q]}\""
                    },
                    identifier: 'busca',
@@ -26,7 +26,7 @@
       <%= render partial: "components/collection/collection",
                  locals:  {
                      items:      @items[:today],
-                     titles:     {
+                     title:     {
                          principal: "Eventos acontecendo hoje e amanhã"
                      },
                      identifier: 'today-and-tomorrow',
@@ -42,8 +42,9 @@
       <%= render partial: "components/collection/collection",
                  locals:  {
                      items:      @items[:follow],
-                     titles:     {
-                         principal: "Eventos de tópicos que você segue"
+                     title:     {
+                         principal: "Tópicos que você segue",
+                         secondary: "Explore os eventos de organizadores, locais e tags que você segue."
                      },
                      identifier: 'follow',
                      type:       :large,
@@ -55,12 +56,34 @@
                      detail:     @items[:follow][:detail]
                  } %>
     </section>
+
+    <section>
+      <%= render partial: "components/collection/collection",
+                 locals:  {
+                     items:      @items[:user_suggestions],
+                     title:     {
+                         principal: "Indicados para você",
+                         secondary: "Explore os eventos que indicamos com base no seu gosto pessoal"
+                     },
+                     identifier: 'user-suggestions',
+                     type:       :large,
+                     filters:    {
+                         categories: true,
+                         ocurrences: true,
+                         kinds:      false
+                     },
+                     detail:     @items[:user_suggestions][:detail]
+                 } %>
+
+    </section>
+
     <section>
       <%= render partial: "components/collection/collection",
                  locals:  {
                      items:      @items[:user_personas],
-                     titles:     {
-                         principal: "Indicados para você no mês"
+                     title:     {
+                         principal: "Gostos parecidos",
+                         secondary: "Explore os eventos que pessoas com gostos parecidos estão salvando"
                      },
                      identifier: 'user-personas',
                      type:       :large,
@@ -74,24 +97,6 @@
 
     </section>
 
-    <section>
-      <%= render partial: "components/collection/collection",
-                 locals:  {
-                     items:      @items[:user_suggestions],
-                     titles:     {
-                         principal: "Sugestões"
-                     },
-                     identifier: 'user-suggestions',
-                     type:       :large,
-                     filters:    {
-                         categories: true,
-                         ocurrences: true,
-                         kinds:      false
-                     },
-                     detail:     @items[:user_suggestions][:detail]
-                 } %>
-
-    </section>
     <%# render partial: "section", locals: { events: @events[:user], titles: {categories: "Eventos nas categorias", occurences: "acontecendo"}, identifier: 'recomendados', type: :large, filters: { categories: true, occurences: true } } %>
   <% end %>
 </div>
