--- a/web/app/assets/stylesheets/components/me-favorite.scss
+++ b/web/app/assets/stylesheets/components/me-favorite.scss
@@ -53,6 +53,26 @@ $gutter: 6px;
     }
   }
 
+  &__empty {
+    background: darken($background-color, 3%);
+    color: $font-secondary-color;
+    order: 10;
+    border-radius: 3px;
+    grid-column-end: span 3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-size: 11px;
+    margin: 33px 0 45px 0;
+    padding: 0 12px;
+
+    & i {
+      font-size: 1.6em;
+    }
+  }
+
   & .material-icons {
     vertical-align: middle;
   }
