--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -33,6 +33,26 @@
     }
   }
 
+  &__empty {
+    background: darken($background-color, 3%);
+    color: $font-secondary-color;
+    order: 10;
+    border-radius: 3px;
+    grid-column-end: span 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-size: 11px;
+    margin: 0 0 95px 0;
+    padding: 0 12px;
+
+    & i {
+      font-size: 1.6em;
+    }
+  }
+
   & .me-card {
     background: none;
     min-height: 150px;
