Refactor to rename Favorites -> Saves

--- a/web/app/assets/stylesheets/components/me-components.scss
+++ b/web/app/assets/stylesheets/components/me-components.scss
@@ -1,5 +1,5 @@
 @import "me-card";
-@import "me-favorite";
+@import "me-saves";
 @import "me-feed";
 @import "me-float-menu";
 @import "me-icon-button";
