--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -1,13 +1,13 @@
-<div id="saves" class="me-favorite" data-controller="favorite" data-target="favorite.saves" data-observable="float-menu.section">
+<div id="saves" class="me-saves" data-controller="saves" data-target="saves.saves" data-observable="float-menu.section">
   <% if current_user and !current_user.taste_events_saved.empty? %>
-    <h3 data-target="favorite.header" class="mdc-typography--headline6">
+    <h3 data-target="saves.header" class="mdc-typography--headline6">
       Eventos salvos
       <i class="material-icons">
         chevron_right
       </i>
     </h3>
     <div class="me-icon__group">
-      <div data-target="favorite.scrollLeft" data-action="click->favorite#scrollLeft"
+      <div data-target="saves.scrollLeft" data-action="click->saves#scrollLeft"
            class="me-icon me-icon--scroll-left me-icon--off">
         <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
              style="pointer-events: none; display: block; width: 100%; height: 100%;">
@@ -17,8 +17,8 @@
         </svg>
       </div>
       <div class="me-icon me-icon--scroll-right me-icon--off"
-           data-action="click->favorite#scrollRight"
-           data-target="favorite.scrollRight">
+           data-action="click->saves#scrollRight"
+           data-target="saves.scrollRight">
         <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false" class="style-scope iron-icon"
              style="pointer-events: none; display: block; width: 100%; height: 100%;">
           <g class="style-scope iron-icon">
@@ -27,20 +27,20 @@
         </svg>
       </div>
     </div>
-    <div class="me-favorite__list mdc-layout-grid"
-         data-target="favorite.list">
+    <div class="me-saves__list mdc-layout-grid"
+         data-target="saves.list">
       <div class="mdc-layout-grid__inner">
         <% saved_events.each do |event| %>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
             <div class="me-card mdc-card me-card--saves event-<%= event.id %>"
-                 data-action="mouseover->favorite-events#showEventDetails"
-                 data-controller="favorite-events"
-                 data-favorite-events-identifier="<%= event.id %>"
+                 data-action="mouseover->saves-events#showEventDetails"
+                 data-controller="saves-events"
+                 data-saves-events-identifier="<%= event.id %>"
                  data-saves-flip-key="<%= "saves-#{dom_id event}" %>"
-                 data-target="favorite-events.event">
+                 data-target="saves-events.event">
               <div class="me-card__remove"
-                   data-action="click->favorite-events#remove"
-                   data-target="favorite-events.remove">
+                   data-action="click->saves-events#remove"
+                   data-target="saves-events.remove">
                 <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet" focusable="false">
                   <path
                     d="m55.7 52.7c6.2 6.7 12.4 13.5 18.6 20.2 2.2 2.4-1.4 5.9-3.5 3.5-6.2-6.7-12.3-13.4-18.5-20.1-6.1 6.8-12.3 13.4-18.4 20.1-2.2 2.4-5.7-1.2-3.5-3.5 6.2-6.7 12.4-13.5 18.6-20.2-6.2-6.7-12.4-13.5-18.6-20.2-2.2-2.4 1.4-5.9 3.5-3.5 6.1 6.6 12.3 13.3 18.4 20 6.2-6.7 12.3-13.4 18.5-20.1 2.2-2.4 5.7 1.2 3.5 3.5-6.2 6.8-12.4 13.5-18.6 20.3z"></path>
@@ -48,15 +48,15 @@
               </div>
               <a href="<%= event.url %>"
                  title="<%= event.details_name %>">
-                <div class="me-card__date" data-target="favorite-events.date">
+                <div class="me-card__date" data-target="saves-events.date">
                   <%= event.day_of_week['decorator'] %>
                 </div>
                 <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event %>">
                   <div class="me-card__overlay"
-                       data-target="favorite-events.overlay"></div>
+                       data-target="saves-events.overlay"></div>
                 </div>
                 <div class="me-card__title mdc-card__title"
-                     data-target="favorite-events.title">
+                     data-target="saves-events.title">
                   <%= limit_name_size event.details_name, 32 %>
                 </div>
               </a>
@@ -65,7 +65,7 @@
         <% end %>
 
         <% if saved_events.size < 6 %>
-          <div class="me-favorite__empty">
+          <div class="me-saves__empty">
             <i class="material-icons-sharp sentiment-satisfied">
               sentiment_satisfied
             </i>
