--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -31,7 +31,7 @@
                   aria-pressed="false"
                   style="<%= 'display: inline' if current_user.taste_events_saved?(event.id) %>">
             <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">star</i>
-            <i class="material-icons mdc-icon-button__icon">star</i>
+            <i class="material-icons mdc-icon-button__icon">star_border</i>
           </button>
         </div>
       </div>
