--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -83,6 +83,9 @@
                data-target="section.loadMoreButton">
             <button class="mdc-button">
               <span class="mdc-button__label">mostrar mais</span>
+              <i class="material-icons">
+                expand_more
+              </i>
             </button>
           </div>
         <% end %>
