--- a/web/app/assets/stylesheets/components/me-filter.scss
+++ b/web/app/assets/stylesheets/components/me-filter.scss
@@ -57,8 +57,8 @@
 
   & .mdc-chip {
     color: $font-secondary-color;
-    background-color: darken($background-color, 5%);
-    border: 1px solid $border-color;
+    background-color: $background-color;
+    border: 2px solid $border-color;
     font-weight: 400;
     font-size: 10px;
     text-transform: uppercase;
@@ -71,7 +71,7 @@
   & .mdc-chip--selected {
     color: $chip-font-color;
     background-color: $chip-background-color;
-    border: 1px solid $chip-border-color;
+    border: $chip-border-size solid $chip-border-color;
     @include mdc-layout-grid-media-query_("phone") {
       border: unset;
     }
