--- a/web/app/assets/stylesheets/components/me-float-menu.scss
+++ b/web/app/assets/stylesheets/components/me-float-menu.scss
@@ -4,7 +4,7 @@
   position: fixed;
   top: 64px;
   bottom: 90px;
-  left: 0;
+  left: 12px;
   z-index: 1;
   will-change: transform;
   color: $icon-light-color;
@@ -38,7 +38,7 @@
     height: 48px;
     display: none;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     cursor: pointer;
     flex-direction: column;
     align-items: center;
