--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
 
 
   <section class="brand">
-    <div class="brand__logo">
+    <div class="brand__logo js-logo">
       <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 35 35" fill="none">
         <path d="M17.5492 34.0853C26.6619 34.0853 34.0492 26.698 34.0492 17.5853C34.0492 8.47263 26.6619 1.08533 17.5492 1.08533C8.43649 1.08533 1.04919 8.47263 1.04919 17.5853C1.04919 26.698 8.43649 34.0853 17.5492 34.0853Z" fill="url(#paint0_linear)" class="smile__body"/>
         <path d="M26.0492 23.1745C20.9492 27.1745 14.1492 27.1745 9.04919 23.1745" stroke="#4A222A" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" class="smile__mouth"/>
@@ -15,7 +15,7 @@
           </linearGradient>
         </defs>
       </svg>
-      <div class="brand__pimba" style="opacity: 0;">Pimba</div>
+      <div class="brand__pimba js-pimba" style="opacity: 0;">Pimba</div>
     </div>
     <div class="brand__letter">
       <img src="images/logo-letter.png" alt="">
@@ -29,35 +29,37 @@
   </section>
 
   <section class="features">
-    <div class="feature feature--activities rellax" data-rellax-speed="3" style="transform: translate(-150px, 150px); opacity: 0">
-      <div class="feature__icon">
-        <img src="/images/welcome/bike-icon.png" alt="bicicleta">
+    <div class="features__scroll-view">
+      <div class="feature feature--activities rellax" data-rellax-speed="3" style="transform: translate(-150px, 150px); opacity: 0">
+        <div class="feature__icon">
+          <img src="/images/welcome/bike-icon.png" alt="bicicleta">
+        </div>
+        <div class="feature__title">Atividades recorrentes para praticar na cidade</div>
       </div>
-      <div class="feature__title">Atividades recorrentes para praticar na cidade</div>
-    </div>
-    <div class="feature feature--events rellax" data-rellax-speed="1" style="transform: translate(-100px, -150px); opacity: 0">
-      <div class="feature__icon">
-        <img src="/images/welcome/calendar-icon.png" alt="calendário">
+      <div class="feature feature--events rellax" data-rellax-speed="1" style="transform: translate(-100px, -150px); opacity: 0">
+        <div class="feature__icon">
+          <img src="/images/welcome/calendar-icon.png" alt="calendário">
+        </div>
+        <div class="feature__title">Eventos sugeridos com base no seu gosto individual</div>
       </div>
-      <div class="feature__title">Eventos sugeridos com base no seu gosto individual</div>
-    </div>
-    <div class="feature feature--topics rellax" data-rellax-speed="1" style="transform: translate(0px, 150px); opacity: 0">
-      <div class="feature__icon">
-        <img src="/images/welcome/hearth-icon.png" alt="coração">
+      <div class="feature feature--topics rellax" data-rellax-speed="1" style="transform: translate(0px, 150px); opacity: 0">
+        <div class="feature__icon">
+          <img src="/images/welcome/hearth-icon.png" alt="coração">
+        </div>
+        <div class="feature__title">Siga os tópicos que você gosta e fique sempre por dentro</div>
       </div>
-      <div class="feature__title">Siga os tópicos que você gosta e fique sempre por dentro</div>
-    </div>
-    <div class="feature feature--friends rellax" data-rellax-speed="1" style="transform: translate(100px, -150px); opacity: 0">
-      <div class="feature__icon">
-        <img src="/images/welcome/friends-icon.png" alt="amigos">
+      <div class="feature feature--friends rellax" data-rellax-speed="1" style="transform: translate(100px, -150px); opacity: 0">
+        <div class="feature__icon">
+          <img src="/images/welcome/friends-icon.png" alt="amigos">
+        </div>
+        <div class="feature__title">Compartilhe com seus melhores amigos seus planos</div>
       </div>
-      <div class="feature__title">Compartilhe com seus melhores amigos seus planos</div>
-    </div>
-    <div class="feature feature--movie rellax" data-rellax-speed="3" style="transform: translate(150px, 150px); opacity: 0">
-      <div class="feature__icon">
-        <img src="/images/welcome/movie-icon.png" alt="filme">
+      <div class="feature feature--movie rellax" data-rellax-speed="3" style="transform: translate(150px, 150px); opacity: 0">
+        <div class="feature__icon">
+          <img src="/images/welcome/movie-icon.png" alt="filme">
+        </div>
+        <div class="feature__title">Filmes do Mario Quintana, Capitólio e Cinemark</div>
       </div>
-      <div class="feature__title">Filmes do Mario Quintana, Capitólio e Cinemark</div>
     </div>
   </section>
 
@@ -93,7 +95,6 @@
       </span>
     </div>
     <div class="invite__google-details">
-      <img src="/images/welcome/google-details.png" alt="conta do google">
     </div>
     <div class="skatista" style="transform: translate(-1900px, -50px);">
     </div>
@@ -173,7 +174,7 @@
     </div>
 
     <section class="footer">
-      <div class="footer__logo-icon">
+      <div class="footer__logo-icon js-logo">
         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 35 35" fill="none">
           <path d="M17.5492 34.0853C26.6619 34.0853 34.0492 26.698 34.0492 17.5853C34.0492 8.47263 26.6619 1.08533 17.5492 1.08533C8.43649 1.08533 1.04919 8.47263 1.04919 17.5853C1.04919 26.698 8.43649 34.0853 17.5492 34.0853Z" fill="url(#paint0_linear)" class="smile__body"/>
           <path d="M26.0492 23.1745C20.9492 27.1745 14.1492 27.1745 9.04919 23.1745" stroke="#4A222A" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" class="smile__mouth"/>
@@ -186,6 +187,7 @@
             </linearGradient>
           </defs>
         </svg>
+        <div class="brand__pimba js-pimba" style="opacity: 0;">Pimba</div>
       </div>
     </section>
   </section>
